--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1, h2, h3 {
@@ -12,11 +12,11 @@ h2 {
 }
 
 header h2 {
-    color: #CEC8FF;
+    color: #a1b9e8;
 }
 
 .site-footer {
-    background-image: linear-gradient(#9ecca4, white);
+    background-image: linear-gradient(#CEC8FF, white);
     padding: 20px 0;
 }
 
@@ -29,12 +29,12 @@ header h2 {
 
 .row-content {
     padding: 50px 0;
-    border-bottom: 1px ridge;
+    border-bottom: 1px dotted rgb(190, 187, 187);
     min-height: 200px;
 }
 
 .navbar {
-    background-color: #720247;
+    background-color: #61013c;
     font-size: larger;
 }
 
@@ -58,5 +58,9 @@ a, a:hover {
 }
 
 .carousel {
-    border: solid #5637DD;
+    border: 1px dotted #ff00ee;
+}
+
+.ourMission {
+    text-align: justify;    
 }
